Refactor byte alignment code, add inner labels